--- a/src/app/components/feature-table/feature-table.component.html
+++ b/src/app/components/feature-table/feature-table.component.html
@@ -1,1 +1,14 @@
-<p>feature-table works!</p>
+<div class="container">
+  <div class="lbl-days">
+    <span *ngFor="let day of days" class="lbl-day">第{{ day }}天</span>
+  </div>
+  <cdk-virtual-scroll-viewport [itemSize]="20" class="cdk-viewport">
+    <div *cdkVirtualFor="let feature of features" class="feature-container">
+      <span *ngIf="feature.header" class="lbl-header">{{
+        feature.header
+      }}</span>
+      <span class="lbl-label">{{ feature.label }}</span>
+      <span *ngFor="let day of days" class="lbl-value">0</span>
+    </div>
+  </cdk-virtual-scroll-viewport>
+</div>
