--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <mat-icon>api</mat-icon>
   <span class="app-title">MIMIC-III LSTM</span>
   <span class="spacer"></span>
-  <a mat-button routerLink="/sepsis">脓毒症</a>
-  <a mat-button routerLink="/mi">心肌梗塞</a>
-  <a mat-button routerLink="/vancomycin">万古霉素</a>
+  <a mat-button routerLink="/sepsis" routerLinkActive="active">脓毒症</a>
+  <a mat-button routerLink="/mi" routerLinkActive="active">心肌梗塞</a>
+  <a mat-button routerLink="/vancomycin" routerLinkActive="active">万古霉素</a>
 </mat-toolbar>
