--- a/src/app/pages/sepsis/sepsis.component.html
+++ b/src/app/pages/sepsis/sepsis.component.html
@@ -7,6 +7,9 @@
         [featureCount]="featureCount"
       ></app-feature-table>
     </div>
-    <div class="results"></div>
+    <div class="results">
+      <app-data-operations></app-data-operations>
+      <app-model-results></app-model-results>
+    </div>
   </div>
 </div>
