--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -5,3 +5,12 @@
 .spacer {
   flex: 1 1 auto;
 }
+
+.active:after {
+  content: '';
+  width: 100%;
+  position: absolute;
+  top: 35px;
+  left: 0;
+  border-bottom: 2px solid rgba(white, 0.7);
+}
