--- a/src/app/pages/sepsis/sepsis.component.html
+++ b/src/app/pages/sepsis/sepsis.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="results">
       <app-data-operations></app-data-operations>
-      <app-model-results></app-model-results>
+      <app-model-results [probabilities]="probabilities"></app-model-results>
     </div>
   </div>
 </div>
