--- a/src/app/components/feature-table/feature-table.component.html
+++ b/src/app/components/feature-table/feature-table.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="lbl-days">
-    <span *ngFor="let day of days" class="lbl-day">第{{ day }}天</span>
+    <span *ngFor="let day of days" class="lbl-day">第{{ day + 1 }}天</span>
   </div>
   <cdk-virtual-scroll-viewport [itemSize]="20" class="cdk-viewport">
     <div *cdkVirtualFor="let feature of features" class="feature-container">
@@ -8,7 +8,9 @@
         feature.header
       }}</span>
       <span class="lbl-label">{{ feature.label }}</span>
-      <span *ngFor="let day of days" class="lbl-value">0</span>
+      <span *ngFor="let day of days" class="lbl-value">
+        {{ x.get(day).get(feature.id) }}
+      </span>
     </div>
   </cdk-virtual-scroll-viewport>
 </div>
