Fixed tslint checks

--- a/src/app/components/model-results/model-results.component.html
+++ b/src/app/components/model-results/model-results.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="showResults" class="container">
   <ngx-charts-line-chart
     [results]="data"
     [scheme]="colorScheme"
