--- a/src/app/components/feature-table/feature-table.component.html
+++ b/src/app/components/feature-table/feature-table.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="x; else xIsNull" class="container">
   <div class="lbl-days">
     <span *ngFor="let day of days" class="lbl-day">第{{ day + 1 }}天</span>
   </div>
@@ -9,8 +9,11 @@
       }}</span>
       <span class="lbl-label">{{ feature.label }}</span>
       <span *ngFor="let day of days" class="lbl-value">
-        {{ x.get(day).get(feature.id) }}
+        <!-- x is guaranteed to be non-null here -->
+        {{ x!.get(day)!.get(feature.id) }}
       </span>
     </div>
   </cdk-virtual-scroll-viewport>
 </div>
+
+<ng-template #xIsNull>No data passed!</ng-template>
