Added loadSample API

--- a/src/app/components/data-operations/data-operations.component.html
+++ b/src/app/components/data-operations/data-operations.component.html
@@ -1,3 +1,5 @@
-<button mat-stroked-button color="primary">加载示例</button>
-<button mat-stroked-button color="primary">重置</button>
-<button mat-flat-button color="primary">预测</button>
+<button mat-stroked-button color="primary" (click)="onLoadSample()">
+  加载示例
+</button>
+<button mat-stroked-button color="primary" (click)="onReset()">重置</button>
+<button mat-flat-button color="primary" (click)="onPredict()">预测</button>
