Completed all store contracts

--- a/src/app/components/model-results/model-results.component.html
+++ b/src/app/components/model-results/model-results.component.html
@@ -8,5 +8,7 @@
     xAxisLabel="Days"
     [timeline]="true"
     [yAxisTicks]="yAxisTicks"
+    [yScaleMax]="1"
+    [yScaleMin]="0"
   ></ngx-charts-line-chart>
 </div>
