--- a/src/app/pages/sepsis/sepsis.component.html
+++ b/src/app/pages/sepsis/sepsis.component.html
@@ -9,6 +9,7 @@
     </div>
     <div class="results">
       <app-data-operations
+        [isLoading]="isLoading$ | async"
         (loadSample)="onLoadSample()"
         (reset)="onReset()"
         (predict)="onPredict()"
