--- a/src/app/components/data-operations/data-operations.component.html
+++ b/src/app/components/data-operations/data-operations.component.html
@@ -1,5 +1,30 @@
-<button mat-stroked-button color="primary" (click)="onLoadSample()">
-  加载示例
-</button>
-<button mat-stroked-button color="primary" (click)="onReset()">重置</button>
-<button mat-flat-button color="primary" (click)="onPredict()">预测</button>
+<div class="container">
+  <button
+    mat-stroked-button
+    color="primary"
+    (click)="onLoadSample()"
+    [disabled]="isLoading"
+  >
+    加载示例
+  </button>
+  <button
+    mat-stroked-button
+    color="primary"
+    (click)="onReset()"
+    [disabled]="isLoading"
+  >
+    重置
+  </button>
+  <button
+    mat-flat-button
+    color="primary"
+    (click)="onPredict()"
+    [disabled]="isLoading"
+  >
+    预测
+  </button>
+
+  <div *ngIf="isLoading" class="spinner">
+    <mat-spinner [diameter]="30"></mat-spinner>
+  </div>
+</div>
