--- a/src/app/components/data-operations/data-operations.component.scss
+++ b/src/app/components/data-operations/data-operations.component.scss
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 button {
   &:not(:first-of-type) {
     margin-left: 8px;
@@ -6,4 +12,9 @@ button {
   &:last-of-type {
     margin-left: 30px;
   }
+}
+
+.spinner {
+  display: inline-block;
+  margin-left: 10px;
 }
