Mirrored stuff to mi and vancomycin

--- a/src/app/pages/mi/mi.component.html
+++ b/src/app/pages/mi/mi.component.html
@@ -1,2 +1,24 @@
-<app-navbar></app-navbar>
-<p>mi works!</p>
+<div class="container">
+  <app-navbar></app-navbar>
+  <div class="content">
+    <div class="feature-table">
+      <app-feature-table
+        [features]="features"
+        [x]="x$ | async"
+      ></app-feature-table>
+    </div>
+    <div class="results">
+      <app-data-operations
+        [isLoading]="isLoading$ | async"
+        (loadSample)="onLoadSample()"
+        (reset)="onReset()"
+        (predict)="onPredict()"
+      ></app-data-operations>
+      <app-model-results
+        [showResults]="showPredictions$ | async"
+        [probabilities]="predictions$ | async"
+        label="患者当日出现脓毒症的概率"
+      ></app-model-results>
+    </div>
+  </div>
+</div>
