Changed prediction labels

--- a/src/app/pages/mi/mi.component.html
+++ b/src/app/pages/mi/mi.component.html
@@ -17,7 +17,7 @@
       <app-model-results
         [showResults]="showPredictions$ | async"
         [probabilities]="predictions$ | async"
-        label="患者当日出现脓毒症的概率"
+        label="患者当日出现心肌梗塞的概率"
       ></app-model-results>
     </div>
   </div>
