--- a/src/app/pages/vancomycin/vancomycin.component.html
+++ b/src/app/pages/vancomycin/vancomycin.component.html
@@ -17,7 +17,7 @@
       <app-model-results
         [showResults]="showPredictions$ | async"
         [probabilities]="predictions$ | async"
-        label="患者当日出现脓毒症的概率"
+        label="患者当日需使用万古霉素治疗的概率"
       ></app-model-results>
     </div>
   </div>
