Feature now displays attention weights

--- a/src/app/pages/mi/mi.component.html
+++ b/src/app/pages/mi/mi.component.html
@@ -5,6 +5,8 @@
       <app-feature-table
         [features]="features"
         [x]="x$ | async"
+        [weights]="weights$ | async"
+        [showWeights]="showWeights$ | async"
       ></app-feature-table>
     </div>
     <div class="results">
