--- a/src/app/components/feature-table/feature-table.component.html
+++ b/src/app/components/feature-table/feature-table.component.html
@@ -8,7 +8,11 @@
         feature.header
       }}</span>
       <span class="lbl-label">{{ feature.label }}</span>
-      <span *ngFor="let day of days" class="lbl-value">
+      <span
+        *ngFor="let day of days"
+        [ngStyle]="getBgColor(day, feature.id)"
+        class="lbl-value"
+      >
         <!-- x is guaranteed to be non-null here -->
         {{ formatValue(x!.get(day)!.get(feature.id)) }}
       </span>
