--- a/src/app/pages/mi/mi.component.html
+++ b/src/app/pages/mi/mi.component.html
@@ -7,6 +7,7 @@
         [x]="x$ | async"
         [weights]="weights$ | async"
         [showWeights]="showWeights$ | async"
+        weightsBaseColor="#F44336"
       ></app-feature-table>
     </div>
     <div class="results">
