--- a/src/app/components/feature-table/feature-table.component.html
+++ b/src/app/components/feature-table/feature-table.component.html
@@ -1,9 +1,12 @@
-<div *ngIf="x; else xIsNull" class="container">
+<div *ngIf="features; else featuresIsNull" class="container">
   <div class="lbl-days">
     <span *ngFor="let day of days" class="lbl-day">第{{ day + 1 }}天</span>
   </div>
   <cdk-virtual-scroll-viewport [itemSize]="20" class="cdk-viewport">
-    <div *cdkVirtualFor="let feature of features" class="feature-container">
+    <div
+      *cdkVirtualFor="let feature of features; let i = index"
+      class="feature-container"
+    >
       <span *ngIf="feature.header" class="lbl-header">{{
         feature.header
       }}</span>
@@ -11,18 +14,18 @@
         {{ feature.label }}
         <span *ngIf="feature.unit" class="lbl-unit">{{ feature.unit }}</span>
       </span>
-      <!-- x is guaranteed to be non-null here -->
       <span
         *ngFor="let day of days"
-        [ngStyle]="getBgColor(day, feature)"
-        [matTooltip]="x!.get(day)!.get(feature.id)"
+        [ngStyle]="weights![day][i]"
+        [matTooltip]="x![day][feature.id].toString()"
         [matTooltipShowDelay]="500"
         class="lbl-value"
       >
-        {{ formatValue(x!.get(day)!.get(feature.id)) }}
+        <!-- x is guaranteed to be non-null here -->
+        {{ format(x![day][feature.id]) }}
       </span>
     </div>
   </cdk-virtual-scroll-viewport>
 </div>
 
-<ng-template #xIsNull>No data passed!</ng-template>
+<ng-template #featuresIsNull>No features passed!</ng-template>
