--- a/src/app/pages/mi/mi.component.html
+++ b/src/app/pages/mi/mi.component.html
@@ -3,10 +3,9 @@
   <div class="content">
     <div class="feature-table">
       <app-feature-table
-        [features]="features"
+        [features]="features$ | async"
         [x]="x$ | async"
         [weights]="weights$ | async"
-        [showWeights]="showWeights$ | async"
         weightsBaseColor="#F44336"
       ></app-feature-table>
     </div>
