--- a/src/app/pages/vancomycin/vancomycin.component.html
+++ b/src/app/pages/vancomycin/vancomycin.component.html
@@ -3,10 +3,9 @@
   <div class="content">
     <div class="feature-table">
       <app-feature-table
-        [features]="features"
+        [features]="features$ | async"
         [x]="x$ | async"
         [weights]="weights$ | async"
-        [showWeights]="showWeights$ | async"
         weightsBaseColor="#9C27B0"
       ></app-feature-table>
     </div>
