Moved formatting logic to store

--- a/src/app/components/feature-table/feature-table.component.html
+++ b/src/app/components/feature-table/feature-table.component.html
@@ -22,7 +22,7 @@
         class="lbl-value"
       >
         <!-- x is guaranteed to be non-null here -->
-        {{ format(x![day][feature.id]) }}
+        {{ formattedX![day][i] }}
       </span>
     </div>
   </cdk-virtual-scroll-viewport>
