--- a/src/app/pages/mi/mi.component.html
+++ b/src/app/pages/mi/mi.component.html
@@ -5,6 +5,7 @@
       <app-feature-table
         [features]="features$ | async"
         [x]="x$ | async"
+        [formattedX]="formattedX$ | async"
         [weights]="weights$ | async"
         weightsBaseColor="#F44336"
       ></app-feature-table>
