--- a/src/app/pages/sepsis/sepsis.component.html
+++ b/src/app/pages/sepsis/sepsis.component.html
@@ -5,6 +5,7 @@
       <app-feature-table
         [features]="features$ | async"
         [x]="x$ | async"
+        [formattedX]="formattedX$ | async"
         [weights]="weights$ | async"
         weightsBaseColor="#4CAF50"
       ></app-feature-table>
