--- a/src/app/pages/vancomycin/vancomycin.component.html
+++ b/src/app/pages/vancomycin/vancomycin.component.html
@@ -5,6 +5,7 @@
       <app-feature-table
         [features]="features$ | async"
         [x]="x$ | async"
+        [formattedX]="formattedX$ | async"
         [weights]="weights$ | async"
         weightsBaseColor="#9C27B0"
       ></app-feature-table>
