--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
-<mat-toolbar color="primary">
-  <mat-icon>api</mat-icon>
-  <span class="app-title">MIMIC-III LSTM</span>
+<mat-toolbar class="mat-elevation-z6">
+  <img class="logo" src="/assets/project-logo.png" alt="Logo" />
   <span class="spacer"></span>
   <a mat-button routerLink="/sepsis" routerLinkActive="active">脓毒症</a>
   <a mat-button routerLink="/mi" routerLinkActive="active">心肌梗塞</a>
