--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,5 +1,5 @@
-.app-title {
-  margin-left: 10px;
+.logo {
+  width: 250px;
 }
 
 .spacer {
@@ -12,5 +12,5 @@
   position: absolute;
   top: 35px;
   left: 0;
-  border-bottom: 2px solid rgba(white, 0.7);
+  border-bottom: 2px solid rgba(33, 150, 243, 0.7);
 }
