Added curves to line graph

--- a/src/app/components/model-results/model-results.component.html
+++ b/src/app/components/model-results/model-results.component.html
@@ -10,5 +10,9 @@
     [yAxisTicks]="yAxisTicks"
     [yScaleMax]="1"
     [yScaleMin]="0"
+    [curve]="curve"
+    [showRefLines]="true"
+    [showRefLabels]="false"
+    [referenceLines]="referenceLines"
   ></ngx-charts-line-chart>
 </div>
