Translated remaining english words

--- a/src/app/components/model-results/model-results.component.html
+++ b/src/app/components/model-results/model-results.component.html
@@ -5,7 +5,7 @@
     [xAxis]="true"
     [yAxis]="true"
     [showXAxisLabel]="true"
-    xAxisLabel="Days"
+    xAxisLabel="住院天数"
     [timeline]="true"
     [yAxisTicks]="yAxisTicks"
     [yScaleMax]="1"
