--- a/src/app/components/feature-table/feature-table.component.scss
+++ b/src/app/components/feature-table/feature-table.component.scss
@@ -2,8 +2,6 @@ $header-width: 6rem;
 $label-width: 7rem;
 $value-width: 2.5rem;
 $cell-padding: 0.3rem;
-$table-width: $header-width + $label-width + ($value-width * 14) +
-  ($cell-padding * 32);
 
 .container {
   display: flex;
@@ -13,7 +11,6 @@ $table-width: $header-width + $label-width + ($value-width * 14) +
 }
 
 .lbl-days {
-  width: $table-width;
   margin: 10px 10px 0;
 }
 
@@ -29,7 +26,7 @@ $table-width: $header-width + $label-width + ($value-width * 14) +
 }
 
 .cdk-viewport {
-  width: $table-width;
+  width: 100%;
   flex: 1;
   margin: 0 10px;
 }
