Integrated AKI model

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,4 +4,5 @@
   <a mat-button routerLink="/sepsis" routerLinkActive="active">脓毒症</a>
   <a mat-button routerLink="/mi" routerLinkActive="active">心肌梗塞</a>
   <a mat-button routerLink="/vancomycin" routerLinkActive="active">万古霉素</a>
+  <a mat-button routerLink="/aki" routerLinkActive="active">急性肾损伤</a>
 </mat-toolbar>
