--- a/src/app/vancomycin/containers/vancomycin/vancomycin.component.html
+++ b/src/app/vancomycin/containers/vancomycin/vancomycin.component.html
@@ -17,7 +17,7 @@
     ></app-data-operations>
     <app-model-results
       [showResults]="showPredictions$ | async"
-      [probabilities]="predictions$ | async"
+      [probabilities]="slicedPredictions$ | async"
       label="患者当日需使用万古霉素治疗的概率"
     ></app-model-results>
   </div>
