--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="mat-elevation-z6">
-  <img class="logo" src="/assets/project-logo.png" alt="Logo" />
+  <img class="logo" src="./assets/project-logo.png" alt="Logo" />
   <span class="spacer"></span>
   <a mat-button routerLink="/sepsis" routerLinkActive="active">脓毒症</a>
   <a mat-button routerLink="/mi" routerLinkActive="active">心肌梗塞</a>
