--- a/src/app/shared/components/feature-table/feature-table.component.scss
+++ b/src/app/shared/components/feature-table/feature-table.component.scss
@@ -61,4 +61,5 @@ $cell-padding: 0.3rem;
   width: $value-width;
   padding: 0.1rem $cell-padding;
   border-top: 1px solid #ccc;
+  cursor: pointer;
 }
