Incorporated feature editor dialog

--- a/src/app/sepsis/containers/sepsis/sepsis.component.html
+++ b/src/app/sepsis/containers/sepsis/sepsis.component.html
@@ -6,6 +6,7 @@
       [formattedX]="formattedX$ | async"
       [weights]="weights$ | async"
       weightsBaseColor="#4CAF50"
+      (change)="onChange($event)"
     ></app-feature-table>
   </div>
   <div class="results">
