--- a/src/app/aki/containers/aki/aki.component.html
+++ b/src/app/aki/containers/aki/aki.component.html
@@ -6,6 +6,7 @@
       [formattedX]="formattedX$ | async"
       [weights]="weights$ | async"
       weightsBaseColor="#9C27B0"
+      (change)="onChange($event)"
     ></app-feature-table>
   </div>
   <div class="results">
