Fixed bug: could not change to 0

--- a/src/app/shared/dialogs/feature-value-editor/feature-value-editor.dialog.html
+++ b/src/app/shared/dialogs/feature-value-editor/feature-value-editor.dialog.html
@@ -3,7 +3,12 @@
   <form [formGroup]="form">
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>{{ data.label }}</mat-label>
-      <input matInput formControlName="featureValue" required />
+      <input
+        matInput
+        formControlName="featureValue"
+        autocomplete="off"
+        required
+      />
       <span *ngIf="data.unit" class="form-unit" matSuffix>{{ data.unit }}</span>
       <mat-error *ngIf="featureValueIsInvalid">
         <span *ngIf="featureValueIsEmpty">特征值不能为空！</span>
