--- a/src/app/shared/components/feature-table/feature-table.component.scss
+++ b/src/app/shared/components/feature-table/feature-table.component.scss
@@ -64,4 +64,10 @@ $cell-padding: 0.3rem;
 
   cursor: pointer;
   user-select: none;
+
+  -webkit-transition: background-color 0.2s ease-out;
+  -moz-transition: background-color 0.2s ease-out;
+  -ms-transition: background-color 0.2s ease-out;
+  -o-transition: background-color 0.2s ease-out;
+  transition: background-color 0.2s ease-out;
 }
