Infer button is now disabled when data is empty

--- a/src/app/aki/containers/aki/aki.component.html
+++ b/src/app/aki/containers/aki/aki.component.html
@@ -12,6 +12,7 @@
   <div class="results">
     <app-data-operations
       [isLoading]="isLoading$ | async"
+      [disableInfer]="disableInfer$ | async"
       (loadSample)="onLoadSample()"
       (reset)="onReset()"
       (predict)="onPredict()"
