--- a/src/app/shared/components/data-operations/data-operations.component.html
+++ b/src/app/shared/components/data-operations/data-operations.component.html
@@ -19,7 +19,7 @@
     mat-flat-button
     color="primary"
     (click)="onPredict()"
-    [disabled]="isLoading"
+    [disabled]="isLoading || disableInfer"
   >
     预测
   </button>
