--- a/src/app/vancomycin/containers/vancomycin/vancomycin.component.html
+++ b/src/app/vancomycin/containers/vancomycin/vancomycin.component.html
@@ -12,6 +12,7 @@
   <div class="results">
     <app-data-operations
       [isLoading]="isLoading$ | async"
+      [disableInfer]="disableInfer$ | async"
       (loadSample)="onLoadSample()"
       (reset)="onReset()"
       (predict)="onPredict()"
