Bootstrap patients module

--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar class="mat-elevation-z6">
   <img class="logo" src="./assets/project-logo.png" alt="Logo" />
   <span class="spacer"></span>
+  <a mat-button routerLink="/patients" routerLinkActive="active">患者</a>
   <a mat-button routerLink="/sepsis" routerLinkActive="active">脓毒症</a>
   <a mat-button routerLink="/mi" routerLinkActive="active">心肌梗塞</a>
   <a mat-button routerLink="/vancomycin" routerLinkActive="active">万古霉素</a>
