--- a/src/app/patients/components/patients-table/patients-table.component.html
+++ b/src/app/patients/components/patients-table/patients-table.component.html
@@ -1,6 +1,8 @@
 <ag-grid-angular
-  style="width: 500px; height: 300px"
-  class="ag-theme-alpine"
+  style="width: 100%; height: 100%"
+  class="ag-theme-material"
   [rowData]="patients"
   [columnDefs]="columnDefs"
+  (firstDataRendered)="onFirstDataRendered($event)"
+  (gridReady)="onGridReady($event)"
 ></ag-grid-angular>
