Added loading overlay

--- a/src/app/patients/containers/patients/patients.component.html
+++ b/src/app/patients/containers/patients/patients.component.html
@@ -6,6 +6,9 @@
     </button>
   </div>
   <div class="table-container">
-    <app-patients-table [patients]="patients$ | async"></app-patients-table>
+    <app-patients-table
+      [patients]="patients$ | async"
+      [isLoading]="isLoading$ | async"
+    ></app-patients-table>
   </div>
 </div>
