Linked patients to API

--- a/src/app/patients/components/patients-table/patients-table.component.html
+++ b/src/app/patients/components/patients-table/patients-table.component.html
@@ -5,4 +5,5 @@
   [columnDefs]="columnDefs"
   (firstDataRendered)="onFirstDataRendered($event)"
   (gridReady)="onGridReady($event)"
+  (rowClicked)="onRowClicked($event)"
 ></ag-grid-angular>
