Added patient detail page

--- a/src/app/core/containers/page-not-found/page-not-found.component.html
+++ b/src/app/core/containers/page-not-found/page-not-found.component.html
@@ -1,1 +1,8 @@
-<p>page-not-found works!</p>
+<div class="container">
+  <div class="header">404</div>
+  <div class="subheader">
+    Oh no! Page not found!
+    <br />
+    You might want to back <a href="/">home</a>.
+  </div>
+</div>
