--- a/src/theme.scss
+++ b/src/theme.scss
@@ -31,3 +31,7 @@ $candy-app-theme: mat-light-theme(
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include angular-material-theme($candy-app-theme);
+
+.elevated {
+  @include mat-elevation(2, black, 0.8);
+}
