--- a/src/app/patients/containers/patient-detail/patient-detail.component.html
+++ b/src/app/patients/containers/patient-detail/patient-detail.component.html
@@ -1,7 +1,23 @@
-<div class="container">
-  <div *ngIf="patient$ | async as patient; else patientNotFound">
-    {{ patient | json }}
-  </div>
+<div class="grid-container">
+  <mat-grid-list *ngIf="patient$ | async as patient" cols="4" rowHeight="220px">
+    <mat-grid-tile [colspan]="2" [rowspan]="1">
+      <app-patient-summary
+        [name]="patient.name"
+        [age]="patient.age"
+        [gender]="patient.gender"
+        [ethnicity]="patient.ethnicity"
+      ></app-patient-summary>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="2" [rowspan]="2">
+      <app-patient-graphs
+        [akiProbs]="akiProbs$ | async"
+        [sepsisProbs]="sepsisProbs$ | async"
+        [miProbs]="miProbs$ | async"
+        [vancomycinProbs]="vancomycinProbs$ | async"
+      ></app-patient-graphs>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1" [rowspan]="1">
+      <app-patient-metrics></app-patient-metrics>
+    </mat-grid-tile>
+  </mat-grid-list>
 </div>
-
-<ng-template #patientNotFound>Patient not found</ng-template>
