--- a/src/app/patients/containers/patient-detail/patient-detail.component.html
+++ b/src/app/patients/containers/patient-detail/patient-detail.component.html
@@ -17,7 +17,14 @@
       ></app-patient-graphs>
     </mat-grid-tile>
     <mat-grid-tile [colspan]="1" [rowspan]="1">
-      <app-patient-metrics></app-patient-metrics>
+      <app-patient-metrics
+        [metrics]="tempRespRateMetrics$ | async"
+      ></app-patient-metrics>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1" [rowspan]="1">
+      <app-patient-metrics
+        [metrics]="bpHeartRateMetrics$ | async"
+      ></app-patient-metrics>
     </mat-grid-tile>
   </mat-grid-list>
 </div>
