--- a/src/app/patients/components/patient-graphs/patient-graphs.component.html
+++ b/src/app/patients/components/patient-graphs/patient-graphs.component.html
@@ -2,7 +2,10 @@
   <mat-card-header>
     <mat-card-title class="header">出现疾病的概率</mat-card-title>
   </mat-card-header>
-  <mat-card-content class="dashboard-card-content">
+  <mat-card-content
+    *ngIf="!isLoading; else loading"
+    class="dashboard-card-content"
+  >
     <div class="chart-container">
       <ngx-charts-line-chart
         [results]="data"
@@ -41,3 +44,9 @@
     </div>
   </mat-card-content>
 </mat-card>
+
+<ng-template #loading>
+  <div class="loading-wrapper">
+    <mat-spinner [diameter]="45"></mat-spinner>
+  </div>
+</ng-template>
