--- a/src/app/patients/components/patient-graphs/patient-graphs.component.html
+++ b/src/app/patients/components/patient-graphs/patient-graphs.component.html
@@ -26,18 +26,34 @@
     </div>
     <div class="legend-label">图例</div>
     <div class="actions-container">
-      <button mat-stroked-button>
+      <button
+        [matBadge]="nMissingAki | badgify"
+        matBadgeColor="warn"
+        mat-stroked-button
+      >
         <span class="legend legend-aki">&#9679;</span>
         急性肾损伤
       </button>
-      <button mat-stroked-button>
+      <button
+        [matBadge]="nMissingSepsis | badgify"
+        matBadgeColor="warn"
+        mat-stroked-button
+      >
         <span class="legend legend-sepsis">&#9679;</span>脓毒症
       </button>
-      <button mat-stroked-button>
+      <button
+        [matBadge]="nMissingMi | badgify"
+        matBadgeColor="warn"
+        mat-stroked-button
+      >
         <span class="legend legend-mi">&#9679;</span>
         心肌梗塞
       </button>
-      <button mat-stroked-button>
+      <button
+        [matBadge]="nMissingVancomycin | badgify"
+        matBadgeColor="warn"
+        mat-stroked-button
+      >
         <span class="legend legend-vancomycin">&#9679;</span>
         万古霉素
       </button>
